# de-zoomcamp-2026-homeworks

./: README.md
de-01-homework/: Dockerfile  README.md  ingest_data.py  main.py  pipeline.py  pyproject.toml
de-02/: README.md
de-02-homework/: 05_postgres_taxi_scheduled.yaml  README.md
de-03-homework/: README.md  load_yelllow_taxi_to_gcp.py  pyproject.toml
de-04-homework/: README.md  load_data_to_bq.py  main.py  pyproject.toml
de-05-homework/: README.md
de-05-homework/zoomcamp/: README_bruin.md
de-05-homework/zoomcamp/pipeline/: pipeline.yml
de-05-homework/zoomcamp/pipeline/assets/ingestion/: payment_lookup.asset.yml  requirements.txt  trips.py
de-05-homework/zoomcamp/pipeline/assets/reports/: trips_report.sql
de-05-homework/zoomcamp/pipeline/assets/staging/: trips.sql
de-06-homework/: Dockerfile  README.md  docker-compose.yml
de-06-homework/notebooks/: Untitled.ipynb
de-07-homework/: Dockerfile.flink  Makefile  README.MD  docker-compose.yml  flink-config.yaml  pyproject.flink.toml  pyproject.toml  send_data.ipynb
de-07-homework/src/job/: q4.py  q5.py  q6.py
de-ws-01/: .clinerc  README.md  main.py  pyproject.toml  taxi_pipeline.py
de-ws-01/.clinerules/: build-rest-api.md  dlt.md  rest_api_extract_parameters.md  rest_api_pagination.md
de-ws-01/.dlt/: secrets.toml
